# httptin

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: get.rs  main.rs  makeresponse.rs  post.rs
src/get/: cookies.rs  getdata.rs  headers.rs  index.html  index.rs  mod.rs  origin.rs  responseheaders.rs  status.rs  test.rs
src/get/favicon/: mod.rs
