[package]
authors = ["Cyril Plisko <cyril.plisko@mountall.com>"]
description = "httpbin like utility rewrite in Rust"
homepage = "https://gitlab.com/imp/httptin"
keywords = ["httpbin", "http"]
license = "MIT/Apache-2.0"
name = "httptin"
repository = "https://gitlab.com/imp/httptin.git"
version = "0.1.2"

[dependencies]
itertools = "0.5"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"

[dependencies.hyper]
version = "0.10"
