[package]
authors = ["Cyril Plisko <cyril.plisko@mountall.com>"]
categories = ["web-programming:http-server"]
description = "httpbin like utility rewrite in Rust"
documentation = "https://docs.rs/httptin"
homepage = "https://gitlab.com/imp/httptin"
keywords = ["httpbin", "http", "server", "injection"]
license = "MIT/Apache-2.0"
name = "httptin"
repository = "https://gitlab.com/imp/httptin.git"
version = "0.1.2"

[badges]
gitlab = { repository = "imp/httpbin" }

[dependencies]
itertools = "0.5"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"

[dependencies.hyper]
version = "0.10"
