[package]
authors = ["Cyril Plisko <cyril.plisko@mountall.com>"]
categories = ["web-programming::http-server"]
description = "httpbin like utility rewrite in Rust"
documentation = "https://docs.rs/httptin"
homepage = "https://gitlab.com/imp/httptin"
keywords = ["httpbin", "http", "server", "injection"]
license = "MIT/Apache-2.0"
name = "httptin"
repository = "https://gitlab.com/imp/httptin.git"
version = "0.2.2"

[badges]
gitlab = { repository = "imp/httptin" }

[dependencies]
itertools = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = "1.5"
slog-term = "1.5"

[dependencies.hyper]
version = "0.10"
